# bekOS

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  hi joe  kernel-link.ld  kernel.cpp  toolchain-arm.cmake  toolchain-arm.cmake.template
.run/: Qemu Debug.run.xml
bek/: CMakeLists.txt
bek/include/: c_string.h
bek/include/bek/: allocations.h  array.h  assertions.h  bitwise_enum.h  buffer.h  compare.h  expected.h  format.h  format_core.h  initializer_list.h  intrusive_shared_ptr.h  memory.h  numeric_limits.h  optional.h  own_ptr.h  span.h  str.h  time.h  traits.h  types.h  utility.h  vector.h
bek/include/swl/: variant.hpp  variant_detail.hpp  variant_visit.hpp
bek/src/: c_string.cpp  format.cpp  memory.cpp  string.cpp  time.cpp  utility.cpp
bek/src/a64/: memory.S
docs/: architecture.md
kernel/include/: font.h  hardtypes.h  kstring.h  memory_locations.h  memory_manager.h  mm.h  page_mapping.h  printf.h  system_registers.h  types.h  utils.h
kernel/include/api/: c_defines.h  device_protocols.h  error_codes.h  interlink.h  syscalls.h
kernel/include/api/protocols/: fb.h  kb.h  mouse.h
kernel/include/arch/: process_entry.h  saved_registers.h
kernel/include/arch/a64/: asm_defines.h  kernel_entry.h  memory_constants.h  saved_registers.h  sysreg_constants.h  translation_tables.h
kernel/include/filesystem/: block_device.h  blockcache.h  cacheddevice.h  device.h  entry.h  entrycache.h  fat.h  fatfs.h  file.h  filesystem.h  hdevice.h  mbr.h  partition.h  path.h  sectorcache.h
kernel/include/interrupts/: deferred_calls.h  int_ctrl.h  int_handle.h
kernel/include/kernel_lib/: dyn_array.h
kernel/include/mm/: addresses.h  areas.h  backing_region.h  barriers.h  device_backed_region.h  dma_utils.h  hw_ptr.h  kmalloc.h  memory_manager.h  page_allocator.h  page_table.h  space_manager.h
kernel/include/peripherals/: arm_gic.h  bitfield_macros.h  clock.h  device.h  device_tree.h  emmc.h  framebuffer.h  gentimer.h  gpio.h  interrupt_controller.h  keyboard.h  mailbox.h  mouse.h  pcie.h  peripherals.h  property_tags.h  system_timer.h  timer.h  uart.h  virtio.h
kernel/include/peripherals/arm/: arm_gic.h  gentimer.h
kernel/include/peripherals/raspberry/: framebuffer.h
kernel/include/peripherals/virtio/: block.h  framebuffer.h  virtio_regs.h
kernel/include/process/: elf.h  entity.h  interlink.h  pipe.h  process.h  process_entry.h  syscall_handling.h  tty.h
kernel/include/usb/: DWHCI.h  DWHost.h  DWRootPort.h  Device.h  TransactionRequest.h  descriptors.h  device.h  hid.h  host_controller.h  interface.h  transfers.h  usb.h  xhci.h  xhci_context.h  xhci_registers.h  xhci_ring.h
kernel/include/usbborrowed/: rpi-usb.h
kernel/src/: CMakeLists.txt  boot.S  crt.s  kernel.cpp  memory_manager.cpp  mm.S  mm.s  page_mapping.cpp  printf.cpp  utils.cpp
kernel/src/arch/a64/: barrier.cpp  boot.S  boot.cpp  cxxabi.cpp  early_boot.cpp  impl.S  impl.cpp  kernel-link.ld  process.S  process_entry.cpp  saved_registers.cpp  syscontrol.S  translation_tables.cpp
kernel/src/boot/: boot.S  boot.cpp  boot2.S  system_registers.h
kernel/src/filesystem/: block_device.cpp  blockcache.cpp  cacheddevice.cpp  device.cpp  entry.cpp  entrycache.cpp  fat.cpp  fatfs.cpp  filesystem.cpp  mbr.cpp  partition.cpp  sectorcache.cpp
kernel/src/interrupts/: deferred_calls.cpp  error_handler.cpp  int_ctrl.S  int_handle.S  int_handle_utils.cpp  interrupt_handler.cpp
kernel/src/kernel_lib/: kstring.c
kernel/src/liballoc/: liballoc.cpp  stubs.cpp
kernel/src/mm/: addresses.cpp  backing_region.cpp  device_backed_region.cpp  dma_utils.cpp  kmalloc.cpp  memory_manager.cpp  page_allocator.cpp  page_table.cpp  space_manager.cpp
kernel/src/peripherals/: arm_gic.cpp  device.cpp  device_tree.cpp  emmc.cpp  framebuffer.cpp  gentimer.cpp  interrupt_controller.cpp  mailbox.cpp  pcie.cpp  peripherals.cpp  property_tags.cpp  qemu.cpp  system_timer.cpp  timing.cpp  uart.cpp  virtio.cpp
kernel/src/peripherals/arm/: arm_gic.cpp  gentimer.cpp
kernel/src/peripherals/raspberry/: emmc.cpp  framebuffer.cpp
kernel/src/peripherals/virtio/: block.cpp  framebuffer.cpp
kernel/src/process/: elf.cpp  entity.cpp  interlink.cpp  pipe.cpp  process.cpp  process_entry.S  syscalls.cpp  tty.cpp
kernel/src/usb/: DWHost.cpp  DWRootPort.cpp  descriptors.cpp  hid.cpp  usb.cpp  xhci.cpp  xhci_ring.cpp
kernel/src/usbborrowed/: rpi-usb.cpp
src/kernel/: CMakeLists.txt  boot.S  kernel.cpp
tools/: run-qemu-debug.sh  run-qemu.sh
userspace/: CMakeLists.txt
userspace/examples/: CMakeLists.txt  dir2fat32.sh
userspace/examples/basicsyscalls/: CMakeLists.txt  main.c
userspace/libcore/: CMakeLists.txt
userspace/libcore/include/core/: device.h  dir.h  error.h  file.h  io.h  process.h  syscall.h
userspace/libcore/src/: allocation.cpp  assertions.cpp  crt0.cpp  cxxabi.h  device.cpp  dir.cpp  error.cpp  file.cpp  io.cpp  process.cpp  syscall.cpp
userspace/libcore/src/a64/: crt0.S  crti.S  crtn.S  syscall.S
userspace/libipc/: CMakeLists.txt
userspace/libipc/include/ipc/: connection.h  message.h
userspace/libipc/src/: connection.cpp  message.cpp
userspace/libipc/tooling/: ipcgen.py
userspace/libwindow/: CMakeLists.txt
userspace/libwindow/include/window/: Window.xml  application.h  core.h  events.h  gfx.h  ipc_core.h  window.h  windowserver_client.h
userspace/libwindow/include/window/widgets/: button.h  stack.h  widget.h
userspace/libwindow/src/: application.cpp  button.cpp  core.cpp  gfx.cpp  ssfn.cpp  ssfn.h  stack.cpp  widget.cpp  window.cpp  windowserver_client.cpp
userspace/programs/: CMakeLists.txt
userspace/programs/init/: CMakeLists.txt  init.cpp
userspace/programs/shell/: CMakeLists.txt  shell.cpp
userspace/programs/stub/: CMakeLists.txt  stub.cpp
userspace/programs/windowserver/: CMakeLists.txt  windowserver.cpp
